# 4dvarnet-starter

./: .gitignore  README.md  clean.sh  environment.yaml  launch_sst.sh  launch_sst_wgeo.sh  license.md  main.py  main_4DVarNet_L63.py  main_wo_hydra.py  metrics_domains.yaml  models_L63.py  my_xps.csv  ose_data_pipeline.ipynb  pip.txt  reproduce_glorys_ose_results.ipynb  run_gpu_1x1.slurm  run_gpu_8x1.slurm  state.pt
.hydra/: config.yaml  hydra.yaml  overrides.yaml
Notebook_DMI/: Notebook_DMI.ipynb  Notebook_DMI_MS.ipynb  Notebook_Diffusion.ipynb  Notebook_Metrics_SST_DMI.ipynb  Notebook_VAE.ipynb
Notebook_SDE/: data.py  diff_spde_base.ipynb  diff_spde_sequential_conditional_diffusion.ipynb
Notebook_SPDE/: Notebook_DMI.ipynb  Notebook_Metrics_OSSE_OSE.ipynb  Notebook_SPDE.ipynb  Notebook_SPDE_rzf=2_forecast.ipynb  Notebook_SPDE_rzf=2_forecast_ose.ipynb  Notebook_SPDE_rzf=2_ose.ipynb  Notebook_SPDE_rzf=2_ose_bigger_model.ipynb  Notebook_SPDE_rzf=2_osse_natl.ipynb  Notebook_SPDE_rzf=2_osse_natl_wOI.ipynb  Notebook_SPDE_wOI.ipynb  OI_c2_frsct2_xp_OSE.nc  OI_c2_frsct4_xp_OSE.nc  OI_c2_mapping_xp_OSE.nc  OI_c2_nrt_xp_OSE.nc  OI_ssh_frsct2.nc  OI_ssh_frsct4.nc  OI_ssh_mapping.nc  OI_ssh_nrt.nc  SPDE_GP_starter.ipynb  compare_FDM_schemes.ipynb  torch_oi.ipynb
Notebook_SPDE_eNATL/: Notebook_SPDE_rzf=2_final_model.ipynb  Notebook_SPDE_rzf=2_forecast.ipynb  Notebook_SPDE_rzf=2_forecast_ose.ipynb  Notebook_SPDE_rzf=2_osse_natl.ipynb
ckpt/: ckpt_spde_woi_wonll.pth  ckpt_spde_wonll_natl_rzf=2.pth  ckpt_spde_wonll_natl_woi_rzf=2.pth  ckpt_spde_wonll_rzf=2.pth  ckpt_spde_wonll_rzf=2_bigger_model_vorticity.pth  ckpt_spde_wonll_rzf=2_enatl.pth  ckpt_spde_wonll_rzf=2_frcst1.pth  ckpt_spde_wonll_rzf=2_frcst2.pth  ckpt_spde_wonll_rzf=2_frcst2_enatl.pth  ckpt_spde_wonll_rzf=2_frcst2_uv.pth  ckpt_spde_wonll_rzf=2_frcst2_uv_atmo.pth  ckpt_spde_wonll_rzf=2_frcst4.pth  ckpt_spde_wonll_rzf=2_frcst4_enatl.pth  ckpt_spde_wonll_rzf=2_nrt.pth  ckpt_spde_wonll_rzf=2_nrt_enatl.pth  ckpt_spde_wonll_rzf=2_sst.pth  ckptnew_spde_wonll_rzf=2_frcst1.pth  sst_dmi.ckpt  sst_dmi_all_baltic.ckpt  sst_dmi_all_baltic_lastweight.ckpt  sst_dmi_all_baltic_wgeo.ckpt  sst_dmi_baltic_interior.ckpt  sst_dmi_v2.ckpt
config/: __init__.py  main.yaml
contrib/: __init__.py  eval_ose.py  forecast_weights  forecast_weights.py  gridding.py  multi_domain_diag.py
contrib/dz_4dvarnet_predict/: dz_4dvarnet_predict.py  pyproject.toml
contrib/dz_lit_patch_predict/: README.md  dz_lit_patch_predict.py  predict_4dvarnet_starter.py  pyproject.toml  qf_predict_4dvarnet_starter.py
contrib/qf_merge_patches/: pyproject.toml  qf_merge_patches.py
contrib/qf_predict_ose_ssh_dc_2021/: README.md  pyproject.toml  qf_predict_ose_ssh_dc_2021.py
notebooks/: env.yaml  tutorial_dataloading.py
postpro_dmi/: animate.py  plot_metrics.py
(+437 files in other folders)
