[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
dynamic = ["version"]
name = "qf_merge_patches"
authors=[
  {name = "Quentin Febvre", email = "quentin.febvre@gmail.com"},
]
[project.urls]
Repository="https://github.com/quentinf00/my_ocb.git"

[project.scripts]
qf_merge_patches = "qf_merge_patches:api_endpoint"

[tool.setuptools]
py-modules=["qf_merge_patches"]
